--- a/index.html
+++ b/index.html
@@ -5,9 +5,375 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>IBN Edu Center official website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header class="container">
+        <!-- navigation bar start -->
+        <nav class="navbar navbar-expand-lg ">
+     <div class="container-fluid">
+    <a class="navbar-brand fw-bold" href="#">IBN Edu Center</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Courses</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Deals</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Success Story</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Gallery</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Freelancing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Career</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Contact Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Register</a>
+        </li>
+      </ul>
+        <button class="btn btn-outline-success" type="submit">Register</button>
+    </div>
+  </div>
+</nav>
+        <!-- navigation bar end  -->
+
+
+        <!-- Slider Start  -->
+        <section class="mt-5">
+            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+  </div>
+  <div class="carousel-inner ">
+    <div class="carousel-item active  " data-bs-interval="10000">
+      <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid rounded" alt="...">
+      <div class="carousel-caption  d-md-block">
+        <h5 class="hc_text">Get Started Digital Learning</h5>
+        <p class="pc_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <div class="btn btn-success"> Get Started</div>
+      </div>
+    </div>
+    <div class="carousel-item" data-bs-interval="2000">
+      <img src="images/cover/cover-2.png" class="d-block w-100 img-fluid rounded" alt="...">
+      <div class="carousel-caption  d-md-block">
+        <h5 class="hc_text">Get Started Digital Learning</h5>
+        <p class="pc_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <div class="btn btn-success"> Get Started</div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="images/cover/cover-3.png" class="d-block w-100 img-fluid rounded" alt="...">
+      <div class="carousel-caption d-md-block">
+        <h5 class="hc_text">Get Started Digital Learning</h5>
+        <p class="pc_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <div class="btn btn-success"> Get Started</div>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+        </section>
+        <!-- Slider end -->
+    </header>
+
+    <main>
+        <!-- popular courses start  -->
+    <section class="mt-5">
+<div class="container ">
+    <div class="container text-center">
+        <h1>Discover Our Popular Courses</h1>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+    </div>
+    
+
+  <div class="row g-2">
+    <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="images/course/course-1.png" class="img-fluid rounded-start " alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
+        <p class="card-text">TSome quick example text to build on the card title and make up the bulk of the card.</p>
+        <p class="card-text"><small class="fw-bold price_textcolor">Price: 22$</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+    <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title fw-bold">Fullstack Web Development</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+        <p class="card-text"><small class="fw-bold price_textcolor">Price: 22$</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+    <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title fw-bold">Photography Basic Rules</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+        <p class="card-text"><small class="fw-bold price_textcolor">Price: 22$</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+    <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title fw-bold">Javascript Basic to advanced</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+        <p class="card-text"><small class="fw-bold price_textcolor">Price: 22$</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+    <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title fw-bold">Digital Marketing</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+        <p class="card-text"><small class="fw-bold price_textcolor">Price: 22$</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+    <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title fw-bold">Motion Graphics</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+        <p class="card-text"><small class="fw-bold price_textcolor">Price: 22$</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+    </div>
+  </div>
+</div>
+        </section>
+         <!-- popular courses start  -->
+
+
+
+ <!-- explore the e- learning start  -->
+        <section class="container mt-5">
+            <div class="card mb-3">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="images/working.png" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body text-center mt-5">
+        <h5 class="fs-1 fw-bold">Explore The elearning Institute</h5>
+        <p class="mt-5 card-text lh-base justify">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.
+  <br>
+  <br>
+Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.</p>
+
+        <div class="container overflow-hidden text-center">
+  <div class="row gx-5">
+    <div class="col">
+     <div class="p-3 border bg-light">
+        <h1>3.2K+</h1>
+        <h5>Online Course</h3>
+     </div>
+    </div>
+    <div class="col">
+      <div class="p-3 border bg-light">
+        <h1>600+</h1>
+        <h5>Expert member</h3>
+      </div>
+    </div>
+    <div class="col">
+      <div class="p-3 border bg-light">
+        <h1>1k+</h1>
+        <h5>Rating & Review</h3>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="btn btn-success mt-5 p-3 fw-bold">Read More</div>
+      </div>
+    </div>
+  </div>
+</div>
+        </section>
+         <!-- explore the e- learning end  -->
+
+    
+        <!-- ready to join extra start  -->
+        <section>
+            <div class="container  p-5 mb-2 mt-5 bg-primary text-white rounded d-flex justify-content-center  align-middle" >
+                <div class="align-middle">
+                    <h2>Ready to join?</h2>
+                    <p>It is a long established fact that a reader will be distracted by
+                        <br>
+                     the readable content of a page when looking at its layout.</p>
+                </div>
+                <div class="d-flex align-items-center reg_button"> 
+                 <button type="button" class="rounded  fw-bold text-primary p-3 border border-1 " data-bs-toggle="modal" data-bs-target="#exampleModal" >Register Now</button>
+                </div>
+            </div>
+
+            <!-- Reg Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Register Now</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Email address</label>
+  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+</div>
+<div class="mb-3">
+  <label for="exampleFormControlTextarea1" class="form-label">Are you willing to enroll in the course?</label>
+  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+ <!-- Reg Modal End  -->
+        </section>
+<!-- ready to join extra end  -->
+
+
+<!-- accordion qus start  -->
+
+<section class="container mt-5">
+    <div class="container text-center">
+        <h1>Frequently Asked Questions</h1>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+    </div>
+
+    <div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        Accordion Item #1
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        Accordion Item #2
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        Accordion Item #3
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
+  </div>
+
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingfore">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefore" aria-expanded="false" aria-controls="collapsefore">
+        Accordion Item #3
+      </button>
+    </h2>
+    <div id="collapsefore" class="accordion-collapse collapse" aria-labelledby="headingfore" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+
+<!-- accordion qus end -->
+
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
