--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generato
 
 <!-- accordion qus start  -->
 
-<section class="container mt-5">
+<section class="container mt-5 mb-5">
     <div class="container text-center">
         <h1>Frequently Asked Questions</h1>
         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
@@ -373,6 +373,22 @@ Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generato
 
 <!-- accordion qus end -->
 
+
+<!-- trusted by over companies start -->
+<section class="container ">
+    <div class="text-center mt-5 mb-5 d-sm-none d-md-block  	d-md-none d-lg-block">
+     <h1>Trusted by over 800+ companies</h1>
+     <div class="d-flex justify-content-between mt-5" >
+        <img src="images/company/company-1.png" alt="">
+        <img src="images/company/company-2.png" alt="">
+        <img src="images/company/company-3.png" alt="">
+        <img src="images/company/company-4.png" alt="">
+        <img src="images/company/company-5.png" alt="">
+        <img src="images/company/company-6.png" alt="">
+     </div>
+    </div>
+</section>
+<!-- trusted by over companies end -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
