--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>IBN Edu Center official website</title>
+     <!-- fontawesome icon  -->
+     <script src="https://kit.fontawesome.com/fe0b73cb51.js"crossorigin="anonymous"></script>
+     <!-- bootstrap css link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- custom css link  -->
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -49,7 +53,7 @@
           <a class="nav-link active" aria-current="page" href="#">Register</a>
         </li>
       </ul>
-        <button class="btn btn-outline-success" type="submit">Register</button>
+        <button class="btn btn-outline-success"  data-bs-toggle="modal" data-bs-target="#exampleModal" type="submit">Register</button>
     </div>
   </div>
 </nav>
@@ -61,13 +65,13 @@
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
   </div>
-  <div class="carousel-inner ">
+  <div class="carousel-inner  ">
     <div class="carousel-item active  " data-bs-interval="10000">
       <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid rounded" alt="...">
       <div class="carousel-caption  d-md-block">
         <h5 class="hc_text">Get Started Digital Learning</h5>
         <p class="pc_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-        <div class="btn btn-success"> Get Started</div>
+        <div class="btn btn-success"  data-bs-toggle="modal" data-bs-target="#exampleModal"> Get Started</div>
       </div>
     </div>
     <div class="carousel-item" data-bs-interval="2000">
@@ -390,6 +394,15 @@ Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generato
 </section>
 <!-- trusted by over companies end -->
     </main>
+
+    <footer class="mt-5 p-5 text-center bg-dark text-white">
+        <h1>IBN Edu Center</h1>
+        <p>Office 41, Navaron Puraton Bazar, Jashore, Bangladesh</p>
+        <p>Privacy Ploicy | Terms of use</p>
+        <a target="_blank" href="https://www.facebook.com/hello.ashrafuzzaman/"><i class="fa-brands fa-facebook"></i></a>
+        <a target="_blank" href="https://www.instagram.com/ashrafuzzamandollar/"><i class="fa-brands fa-instagram"></i></a>
+        <a target="_blank" href="https://www.youtube.com/watch?v=gJYGukNCBJc"><i class="fa-brands fa-youtube"></i></a>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
