Error solve done

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a class="nav-link active" aria-current="page" href="#">Register</a>
         </li>
       </ul>
-        <button class="btn btn-outline-success"  data-bs-toggle="modal" data-bs-target="#exampleModal" type="submit">Register</button>
+        <button class="btn btn-outline-success "  data-bs-toggle="modal" data-bs-target="#exampleModal" type="submit">Register</button>
     </div>
   </div>
 </nav>
@@ -61,47 +61,47 @@
 
 
         <!-- Slider Start  -->
-        <section class="mt-5">
-            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-  </div>
-  <div class="carousel-inner  ">
-    <div class="carousel-item active  " data-bs-interval="10000">
-      <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid rounded" alt="...">
-      <div class="carousel-caption  d-md-block">
-        <h5 class="hc_text">Get Started Digital Learning</h5>
-        <p class="pc_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-        <div class="btn btn-success"  data-bs-toggle="modal" data-bs-target="#exampleModal"> Get Started</div>
-      </div>
-    </div>
-    <div class="carousel-item" data-bs-interval="2000">
-      <img src="images/cover/cover-2.png" class="d-block w-100 img-fluid rounded" alt="...">
-      <div class="carousel-caption  d-md-block">
-        <h5 class="hc_text">Get Started Digital Learning</h5>
-        <p class="pc_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-        <div class="btn btn-success"> Get Started</div>
+         <section class="container mt-5 mb-5">
+            <div id="carouselExampleControls" class="carousel slide " data-bs-ride="carousel">
+  <div class="carousel-inner rounded-3 align-items-center justify-content-center">
+    <div class="carousel-item active">
+      <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+        <div class="carousel-caption ">
+        <h5 class="fs-2  fw-bold">Get Started Digital Learning</h5>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <div class="btn btn-success fw-bold">Get Started</div>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/cover/cover-3.png" class="d-block w-100 img-fluid rounded" alt="...">
-      <div class="carousel-caption d-md-block">
-        <h5 class="hc_text">Get Started Digital Learning</h5>
-        <p class="pc_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-        <div class="btn btn-success"> Get Started</div>
+      <img src="images/cover/cover-2.png" class="d-block w-100" alt="...">
+        <div class="carousel-caption">
+        <h5 class="fs-2  fw-bold">Get Started Digital Learning</h5>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <div class="btn btn-success fw-bold">Get Started</div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="images/cover/cover-3.png" class="d-block w-100" alt="...">
+        <div class="carousel-caption">
+        <h5 class="fs-2  fw-bold">Get Started Digital Learning</h5>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout..</p>
+        <div class="btn btn-success fw-bold">Get Started</div>
       </div>
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-        </section>
-        <!-- Slider end -->
+         </section>
+
+        <!-- Slider end  -->
+        
     </header>
 
     <main>
@@ -321,7 +321,7 @@ Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generato
         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
     </div>
 
-    <div class="accordion" id="accordionExample">
+    <div class="accordion mt-5" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -380,7 +380,7 @@ Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generato
 
 <!-- trusted by over companies start -->
 <section class="container ">
-    <div class="text-center mt-5 mb-5 d-sm-none d-md-block  	d-md-none d-lg-block">
+    <div class="text-center mt-5 mb-5 d-sm-none d-md-block  d-md-none d-lg-block d-none d-sm-block">
      <h1>Trusted by over 800+ companies</h1>
      <div class="d-flex justify-content-between mt-5" >
         <img src="images/company/company-1.png" alt="">
@@ -394,7 +394,8 @@ Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generato
 </section>
 <!-- trusted by over companies end -->
     </main>
-
+ 
+    <!-- footer design start  -->
     <footer class="mt-5 p-5 text-center bg-dark text-white">
         <h1>IBN Edu Center</h1>
         <p>Office 41, Navaron Puraton Bazar, Jashore, Bangladesh</p>
@@ -403,6 +404,7 @@ Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generato
         <a target="_blank" href="https://www.instagram.com/ashrafuzzamandollar/"><i class="fa-brands fa-instagram"></i></a>
         <a target="_blank" href="https://www.youtube.com/watch?v=gJYGukNCBJc"><i class="fa-brands fa-youtube"></i></a>
     </footer>
+    <!-- footer design end  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
