--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <main>
             <!-- popular courses start  -->
             <section class="mt-5">
-                <div class="container ">
+                <div class="container text-center justify-content-center ">
                     <div class="container text-center">
                         <h1>Discover Our Popular Courses</h1>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
@@ -242,6 +242,7 @@
                             </div>
                         </div>
                     </div>
+                    <button type="button" class="btn btn-success fw-bold p-2 mt-5 mb-5">View All</button>
                 </div>
             </section>
             <!-- popular courses start  -->
@@ -253,7 +254,7 @@
                 <div class="card mb-3">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="images/working.png" class="img-fluid rounded-start" alt="...">
+                            <img src="images/working.png" class="img-fluid rounded-start " alt="...">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body text-center mt-5">
@@ -300,21 +301,36 @@
 
 
             <!-- ready to join extra start  -->
-            <section>
-                <div
-                    class="container  p-5 mb-2 mt-5 bg-primary text-white rounded d-flex justify-content-center  align-middle">
-                    <div class="align-middle">
+            <section class="container">
+                <div class=" row g-0 text-center bg-primary mt-5 mb-5 text-white p-5 rounded-3 d-flex justify-content-center">
+                    <div class="col-sm-6 col-md-8 ">
+                    <h2>Ready to join?</h2>
+                    <p>It is a long established fact that a reader will be distracted by
+                        <br>
+                       the readable content of a page when looking at its layout.
+                    </p>
+                    </div>
+                    <div class="col-6 col-md-4 d-flex align-items-center justify-content-end ">
+                        <button type="button" class="rounded  fw-bold text-primary p-3 border border-1 " data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">Register Now</button>
+                    </div>
+                </div>
+
+
+
+                <!-- <div class="container  p-5 mb-2 mt-5 bg-primary text-white rounded d-flex ">
+                    <div class="align-middle flex-sm-column-reverse">
                         <h2>Ready to join?</h2>
                         <p>It is a long established fact that a reader will be distracted by
                             <br>
                             the readable content of a page when looking at its layout.
                         </p>
                     </div>
-                    <div class="d-flex align-items-center reg_button">
+                    <div class="d-flex align-items-center justify-content-end reg_button w-100 ">
                         <button type="button" class="rounded  fw-bold text-primary p-3 border border-1 "
                             data-bs-toggle="modal" data-bs-target="#exampleModal">Register Now</button>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Reg Modal -->
                 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
