--- a/index.html
+++ b/index.html
@@ -259,14 +259,14 @@
                         <div class="col-md-8">
                             <div class="card-body text-center mt-5">
                                 <h5 class="fs-1 fw-bold">Explore The elearning Institute</h5>
-                                <p class="mt-5 card-text lh-base justify">There are many variations of passages of Lorem
-                                    Ipsum available, but the majority have suffered alteration in some form, by injected
-                                    humour, or randomised words which don't look even slightly believable. If you are
-                                    going to use a passage of Lorem Ipsum, you need to be sure.
-                                    <br>
-                                    <br>
-                                    Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators
-                                    on the Internet tend to repeat predefined.
+                                <p class="mt-5 card-text lh-base justify">The study aims to explore how CAREC can best
+                                    intensify its support for regional actions to respond to climate change.
+                                    One key aspect of the preparation of this scoping study involves consultation with
+                                    CAREC-national and international
+                                    climate experts.The study aims to explore how CAREC can best intensify its support
+                                    for regional actions to respond to climate change. One key aspect of the preparation
+                                    of this scoping study <br> <br> involves consultation with CAREC-national and
+                                    international climate experts.
                                 </p>
 
                                 <div class="container overflow-hidden text-center">
@@ -302,17 +302,18 @@
 
             <!-- ready to join extra start  -->
             <section class="container">
-                <div class=" row g-0 text-center bg-primary mt-5 mb-5 text-white p-5 rounded-3 d-flex justify-content-center">
+                <div
+                    class=" row g-0 text-center bg-primary mt-5 mb-5 text-white p-5 rounded-3 d-flex justify-content-center">
                     <div class="col-sm-6 col-md-8 ">
-                    <h2>Ready to join?</h2>
-                    <p>It is a long established fact that a reader will be distracted by
-                        <br>
-                       the readable content of a page when looking at its layout.
-                    </p>
+                        <h2>Ready to join?</h2>
+                        <p>It is a long established fact that a reader will be distracted by
+                            <br>
+                            the readable content of a page when looking at its layout.
+                        </p>
                     </div>
                     <div class="col-6 col-md-4 d-flex align-items-center justify-content-end ">
-                        <button type="button" class="rounded  fw-bold text-primary p-3 border border-1 " data-bs-toggle="modal"
-                            data-bs-target="#exampleModal">Register Now</button>
+                        <button type="button" class="rounded  fw-bold text-primary p-3 border border-1 "
+                            data-bs-toggle="modal" data-bs-target="#exampleModal">Register Now</button>
                     </div>
                 </div>
 
@@ -486,6 +487,3 @@
     </body>
 
 </html>
-
-
-
